<resources>
    <string name="app_name">ScheApp.4.0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menuMonday">Monday</string>
    <string name="menuTuesday">Tuesday</string>
    <string name="menuWednesday">Wednesday</string>
    <string name="menuThursday">Thursday</string>
    <string name="menuFriday">Friday</string>
    <string name="menuSaturday">Saturday</string>

    <string name="default_time_text">Time</string>
    <string name="default_lesson_teacher_text">Lesson, Teacher</string>
    <string name="default_type_text">Type</string>
    <string name="default_room_text">Room</string>
    <string name="add_btn">Add</string>

    <string name="default_time_hint">08:00</string>
    <string name="default_lesson_teacher_hint">Informatics, Dastan Tulokulov</string>
    <string name="default_type_hint">prac</string>
    <string name="default_room_hint">502</string>
    <string name="sendBtn">Send</string>
    <string name="defaultNumber">+996552270898</string>
    <string name="sign_out">Sign out</string>
    <string name="defaultCode">123456</string>
    <string name="confirm">Confirm</string>
    <string name="default_name">Dastan Tulokulov</string>
    <string name="default_group">AIN-1-16</string>
    <string name="log_in">Log In</string>
    <string name="defaultGroup">AIN-1-16</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcomeText">Welcome to ScheApp! Please input your phone number to get verification code to authorization</string>
    <string name="groupText">Please input group name with capital letters like in hint below</string>
    <string name="listGroup">List of groups</string>
    <string name="profile">Profile</string>
    <string name="menuAbout">About us</string>

    <string-array name="group_list">
        <item>AIN-1-19</item>
        <item>AIN-1-18</item>
        <item>AIN-1-17</item>
        <item>AIN-2-17</item>
        <item>AIN-1-16</item>
        <item>MIN-1-16</item>
    </string-array>
</resources>
