<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navMonday"
            android:icon="@drawable/ic_today"
            android:title="@string/menuMonday" />
        <item
            android:id="@+id/navTuesday"
            android:icon="@drawable/ic_today"
            android:title="@string/menuTuesday" />
        <item
            android:id="@+id/navWednesday"
            android:icon="@drawable/ic_today"
            android:title="@string/menuWednesday" />
        <item
            android:id="@+id/navThursday"
            android:icon="@drawable/ic_today"
            android:title="@string/menuThursday" />
        <item
            android:id="@+id/navFriday"
            android:icon="@drawable/ic_today"
            android:title="@string/menuFriday" />
        <item
            android:id="@+id/navSaturday"
            android:icon="@drawable/ic_today"
            android:title="@string/menuSaturday" />
    </group>
</menu>
