<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="4"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvTimeTue"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_16"
        android:text="@string/default_time_text"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/tvLessonTue"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_16"
        android:text="@string/default_lesson_teacher_text"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/tvTypeTue"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_16"
        android:text="@string/default_type_text"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/tvRoomTue"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:padding="@dimen/padding_16"
        android:text="@string/default_room_text"
        android:textColor="@color/colorBlack" />


</GridLayout>