<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_16"
    tools:context=".main.PhoneActivity">

    <EditText
        android:id="@+id/etCodeNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/defaultCode"
        android:layout_alignParentTop="true"
        android:inputType="phone"/>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etCodeNumber"
        android:text="@string/confirm"
        android:background="@color/colorAccent"
        android:textColor="@color/colorWhite"
        android:onClick="onConfirm"/>

    <ProgressBar
        android:id="@+id/phoneProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"/>
    
    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/defaultNumber"
        android:layout_alignParentTop="true"
        android:inputType="phone"/>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPhoneNumber"
        android:background="@color/colorAccent"
        android:textColor="@color/colorWhite"
        android:text="@string/sendBtn"
        android:onClick="onCodeSend"/>
</RelativeLayout>