<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="4"
            android:orientation="horizontal">

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_16"
                android:text="@string/default_time_text"
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_16"
                android:text="@string/default_lesson_teacher_text"
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_16"
                android:text="@string/default_type_text"
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:padding="@dimen/padding_16"
                android:text="@string/default_room_text"
                android:textColor="@color/colorWhite" />

        </GridLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>