<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.monday.MondayFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="4"
            android:orientation="horizontal">

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_16"
                android:text="@string/default_time_text"
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_16"
                android:text="@string/default_lesson_teacher_text"
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_16"
                android:text="@string/default_type_text"
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:padding="@dimen/padding_16"
                android:text="@string/default_room_text"
                android:textColor="@color/colorWhite" />

        </GridLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTuesday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <com.hamza.slidingsquaresloaderview.SlidingSquareLoaderView
            android:id="@+id/pbTue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:sslv_start="true"
            app:sslv_gap="2dp"
            app:sslv_square_length="40dp"
            app:sslv_color="@color/colorAccent"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>