<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_16"
    tools:context=".add.AddGroupActivity">

    <TextView
        android:id="@+id/groupText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/groupText"
        android:textColor="@color/colorBlack"
        android:textSize="25dp"
        android:gravity="center"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etMondayGroupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/defaultGroup"
        android:layout_marginTop="@dimen/padding_16"
        app:layout_constraintTop_toBottomOf="@id/groupText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:id="@+id/addGroupMondayProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/groupText"
        app:layout_constraintBottom_toTopOf="@id/btnAddGroup"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/btnAddGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_btn"
        android:textSize="32dp"
        android:layout_margin="@dimen/margin_24"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="@dimen/padding_16"
        android:onClick="onGroupMondayAdd"
        android:background="@drawable/btn_background"
        app:layout_constraintTop_toBottomOf="@+id/etMondayGroupName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>