<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="@dimen/padding_16"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".main.ProfileActivity">
    
    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/ic_launcher_round"
        android:layout_centerHorizontal="true"/>

    <com.hamza.slidingsquaresloaderview.SlidingSquareLoaderView
        android:id="@+id/imgProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:sslv_start="true"
        app:sslv_gap="2dp"
        app:sslv_square_length="20dp"
        app:sslv_color="@color/colorAccent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"/>
    
    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_16"
        android:hint="@string/default_name"
        android:layout_below="@id/imgProfile"/>

    <com.hamza.slidingsquaresloaderview.SlidingSquareLoaderView
        android:id="@+id/profileProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:sslv_start="true"
        app:sslv_gap="2dp"
        app:sslv_square_length="20dp"
        app:sslv_color="@color/colorAccent"
        android:layout_below="@+id/etName"
        android:layout_centerInParent="true"/>


    <EditText
        android:id="@+id/etGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_16"
        android:hint="@string/default_group"
        android:layout_below="@id/etName"/>

    <Spinner
        android:id="@+id/spGroup"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16sp"
        android:background="@drawable/spinner_icon"
        style="@style/styleSpinner"
        android:layout_below="@id/etGroup"/>

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_16"
        android:text="@string/log_in"
        android:onClick="onLogIn"
        android:background="@drawable/btn_background"
        android:textColor="@color/colorWhite"
        android:layout_below="@id/spGroup"/>

</RelativeLayout>